<resources>
    <string name="app_name">News App</string>
    <string name="no_data">There\'s no news</string>
    <string name="internet_error">No Intertnet Connection :(</string>
    <string name="no_internet">No Internet Connection :(</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_title">News App Settings</string>
    <string name="settings_search_Title">Query contains words </string>
    <string name="settings_search_Key">search_word</string>
    <string name="settings_search_default">kids</string>
    <string name="setting_orderby_title">Order by</string>
    <string name="setting_orderby_defValue">newest</string>
    <string name="setting_order_by_key">order_by</string>
    <string name="orderby_sumary">You can select the order-by factor to order news list</string>
    <string name="search_summary">customize search query key to retrieve the news list</string>
</resources>
